--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Questoes</title>
   <link rel="shortcut icon" href="assets/images/favicon-32x32.png" type="image/x-icon">
   <link rel="stylesheet" href="estilo/style.css">
+  <link rel="stylesheet" href="responsive.css">
 </head>
 <body>
   <div>
